--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "start": "next start"
   },
   "dependencies": {
+    "axios": "^0.21.1",
     "faker": "^5.5.3",
     "next": "10.2.3",
     "react": "17.0.2",
