--- a/package.json
+++ b/package.json
@@ -10,9 +10,11 @@
   "dependencies": {
     "axios": "^0.21.1",
     "faker": "^5.5.3",
+    "formik": "^2.2.9",
     "next": "10.2.3",
     "react": "17.0.2",
     "react-dom": "17.0.2",
+    "react-loading-skeleton": "^2.2.0",
     "styled-components": "^5.3.0"
   },
   "devDependencies": {
