--- a/package.json
+++ b/package.json
@@ -5,7 +5,9 @@
   "scripts": {
     "dev": "next dev",
     "build": "next build",
-    "start": "next start"
+    "start": "next start",
+    "test": "jest",
+    "test-coverage": "jest --coverage"
   },
   "dependencies": {
     "axios": "^0.21.1",
@@ -18,17 +20,24 @@
     "styled-components": "^5.3.0"
   },
   "devDependencies": {
+    "@testing-library/dom": "^7.31.2",
+    "@testing-library/jest-dom": "^5.13.0",
+    "@testing-library/react": "^11.2.7",
+    "@testing-library/user-event": "^13.1.9",
     "@types/faker": "^5.5.6",
+    "@types/jest": "^26.0.23",
     "@types/react": "17.0.9",
     "@types/styled-components": "^5.1.9",
     "@typescript-eslint/eslint-plugin": "^4.26.0",
     "@typescript-eslint/parser": "^4.26.0",
+    "babel-jest": "^27.0.2",
     "babel-plugin-styled-components": "^1.12.0",
     "eslint": "^7.27.0",
     "eslint-config-google": "^0.14.0",
     "eslint-config-prettier": "^8.3.0",
     "eslint-import-resolver-typescript": "^2.4.0",
     "eslint-plugin-react": "^7.24.0",
+    "jest": "^27.0.4",
     "prettier": "^2.3.0",
     "typescript": "4.3.2"
   }
