--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "test": "jest",
+    "test": "jest --watch",
     "test-coverage": "jest --coverage"
   },
   "dependencies": {
@@ -27,9 +27,11 @@
     "@types/faker": "^5.5.6",
     "@types/jest": "^26.0.23",
     "@types/react": "17.0.9",
+    "@types/react-dom": "^17.0.6",
     "@types/styled-components": "^5.1.9",
     "@typescript-eslint/eslint-plugin": "^4.26.0",
     "@typescript-eslint/parser": "^4.26.0",
+    "axios-mock-adapter": "^1.19.0",
     "babel-jest": "^27.0.2",
     "babel-plugin-styled-components": "^1.12.0",
     "eslint": "^7.27.0",
